# agentism

./: .env.example  .gitignore  AGENTS.md  README.md  _check_tables.py  _probe.py  agent.py  app.py  cli.py  commands.py  config.py  conftest.py  prompts.py  pyproject.toml  start.py  state.py  streaming.py  tool_metadata.py
.github/workflows/: ci.yml
agentism/: __init__.py  __main__.py  app.py  cli.py  commands.py  config.py  memory_demo.py  memory_store.py  prompts.py  state.py  streaming.py  tool_metadata.py
agentism/knowledge/: api-conventions.md  dependency-upgrade-playbook.md  groovy-idioms.md  platform-cli-preference.md  platform-overview.md  pr-conventions.md  testing-patterns.md  trevorism-security.md
tests/: conftest.py  legacy_module_behaviors_reference.py  test_app.py  test_commands.py  test_discovery_filters.py  test_file_tool.py  test_git_tool.py  test_git_tool_create_file.py  test_health.py  test_integration_local_smoke.py  test_integration_platform_github_smoke.py  test_level1.py  test_level2.py  test_prompts.py  test_streaming.py  test_tool_metadata.py
tests/agentism/: test_app.py  test_cli.py  test_commands.py  test_memory_store.py  test_prompts.py  test_streaming.py  test_tool_metadata.py
tests/integration/: test_local_smoke.py  test_platform_github_smoke.py
tests/tools/: test_discovery_filters.py  test_file_tool.py  test_git_tool.py  test_git_tool_create_file.py  test_health.py  test_shell.py  (+3 more)
tools/: __init__.py  code_search.py  discovery_filters.py  file_tool.py  git_tool.py  health.py  repo_paths.py  shell.py  test_runner.py  web_tool.py
