[project]
name = "agentism"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-ollama>=0.2",
    "langchain-community>=0.3",
    "langchain-mcp-adapters>=0.1",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "gitpython>=3.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "aiosqlite>=0.20",
    "rich>=13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
log_cli = true
log_cli_level = "WARNING"
addopts = "-m 'not integration'"
markers = [
    "integration: tests that require local services, credentials, or machine-specific setup",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
agent = "agent:main"
